Item entity; Item add/delete action; Item API DOC; Migrations
